--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Navbar -->
 
-    <nav class="navbar navbar-light bg-dark">
+    <nav class="navbar navbar-light bg-dark" id="fixedNav">
       <a class="navbar-brand" href="index.html">
         <h2 class="text-white">Food Adda</h2>
       </a>
@@ -41,15 +41,15 @@
         </button>
       </div>
     </nav>
-    <!-- slider and filter -->
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-3">
           <!-- filter -->
-          <div class="card">
+          <div class="card my-3 shadow">
             <div class="card-group">
-              <div class="header ">
-                <h2>Filter</h2>
+              <div class="header border col-12 bg-danger text-warning">
+                <h2 class="text-center">Filter</h2>
               </div>
             </div>
             <div class="card-body">
@@ -69,7 +69,7 @@
         </div>
 
         <!-- foods -->
-        <div class="col-lg-9 border">
+        <div class="col-lg-9 border my-3 border border-info shadow-lg">
           <h2 class="text-white bg-success text-center" id="type">
             Latest Foods
           </h2>
