--- a/details.html
+++ b/details.html
@@ -21,6 +21,10 @@
             h2 {
               font-family: "Carter One", cursive;
             }
+            body {
+              background: rgb(63,225,251);
+              background: linear-gradient(66deg, rgba(63,225,251,0.5578606442577031) 0%, rgba(252,70,70,0.3169642857142857) 92%);
+            }
           </style>
   </head>
   <body>
@@ -54,8 +58,8 @@
           </div>
           <!-- Instruction -->
           </div>
-          <div class="row">
-          <div class="col-lg-8 col-md-6 col-12 shadow-lg" id="dishVideo">
+          <div class="row bg-white shadow">
+          <div class="col-lg-8 col-md-6 col-12" id="dishVideo">
 
             <!-- video here -->
           </div>
@@ -65,9 +69,7 @@
           </div>
       </div>
     </div>
-    </div>
-   
-
+    </div>   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/script/details.js"></script>
   </body>
